# DeepsEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  deps.json  download-bullet.sh  index.js  main.cpp  package.json  setup-macos.sh  setup.sh
cmake/: DeepsEngineSetup.cmake  FINDSDL2.cmake  FindLibraries.cmake  Util.cmake
deeps-engine-archive/v1/: .gitignore
deeps-engine-archive/v2/: .clang-format  .gitignore  CMakeLists.txt  README.md  tsconfig.json  (+1 more)
deeps-engine-latest/: .gitignore  CMakeLists.txt  README.md  package.json  wasm_commands.txt  webpack.config.js
deeps-engine-latest/src/: game.cpp  game.hpp  linmath.h  main.cpp  mainwindow.ui
deeps-engine-latest/src/Components/OpenGLCube/: OpenGLReactWidget.ts
deeps-engine-latest/src/Editor/: App.tsx  OpenGLCubeWidget.cpp  OpenGLCubeWidget.h  OpenGLWidget.cpp  OpenGLWidget.h  index.tsx  mainwindow.cpp  mainwindow.ui
deeps-engine-latest/src/Editor/Components/Editor/: index.tsx
deeps-engine-latest/src/Editor/Components/OpenGLCube/: OpenGLWidget.ts
deeps-engine-latest/src/Engine/: OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  main.cpp
deeps-engine-latest/src/Engine/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
deeps-engine-latest/src/Engine/component/: Components.h
deeps-engine-latest/src/Engine/include/: stb_image.h
deeps-engine-latest/src/EngineBindings/: OpenGLWidget.cpp
deeps-engine-latest/src/QTEngineRenderer/: OpenGLNodeGuiWidget.h  OpenGLWidget.h
deeps-engine-latest/src/QtRenderer/: OpenGLNapiWrapper.cpp  OpenGLNapiWrapper.h  OpenGLWidget.cpp  OpenGLWidget.h
deeps-engine-latest/src/editor/: mainwindow.cpp  mainwindow.h
deeps-engine-latest/src/editor/widget/: ConsoleWidget.h  InspectorWidget.cpp  InspectorWidget.h  OpenGLWidget.cpp  OpenGLWidget.h  SceneViewWidget.cpp  SceneViewWidget.h
deeps-engine-latest/src/editor/widget/component/: CameraComponentWidget.cpp  CameraComponentWidget.h  TagComponentWidget.cpp  TagComponentWidget.h  TransformComponentWidget.cpp  TransformComponentWidget.h
deeps-engine-latest/src/engine/: Logger.h
deeps-engine-latest/src/engine/component/: Component.h
deeps-engine-latest/src/engine/include/: entt.hpp  glad.c  stb_image.h
deeps-engine-latest/src/engine/renderer/: Renderer.cpp  Renderer.h  Shader.h  WebRenderer.cpp  WebRenderer.hpp
deeps-engine-latest/src/engine/scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
deeps-engine-latest/web_build/: CMakeCache.txt  Makefile  Release.js  Release.wasm  app.html  build.sh  cmake_install.cmake
deeps-engine-latest/web_build/assets/example-project/shaders/: shader.frag  shader.vert
editor/: .gitignore  CMakeLists.txt  README.md  binding.gyp  index.html  index.js  package.json  preload.js  tsconfig.json  webpack.config.js  webpack.config.ts
editor/cppsrc/Samples/: functionexample.cpp  functionexample.h
editor/engine/Samples/: functionexample.h
editor/example_projects/blank_project/shaders/: shader.frag  shader.vert
editor/src/: electron.ts  index.html  react.tsx
editor/src/public/: design-tokens.ts  interfaces.ts  react.tsx  theme.ts
editornative/: App.tsx  interfaces.ts  package.json
engine/: .gitignore  CMakeLists.txt  README.md  main.cpp
engine/EditorBinding/: bindings.cpp  bindings.h  exportbindings.cpp  functionexample.h
engine/Samples/: Renderer.cpp  Renderer.h  functionexample.cpp  functionexample.h
engine/src/: Component.cpp  Component.h  ComponentManager.h  ComponentSystem.cpp  ComponentSystem.h  Coordinator.h  ECS.h  EntityManager.cpp  EntityManager.h  IComponentArray.cpp  IComponentArray.h  PhysicsSystem.h  Renderer.cpp  Renderer.h  Shader.h  System.h  SystemManager.h  glad.c  main.cpp  stb_image.h  uuid.cpp  uuid.h
engine/src/example_projects/blank_project/shaders/: shader.frag  shader.vert
neo-editor/: .gitignore  CMakeLists.txt  package.json
neo-editor/src/: App.tsx
neo-editor/src/Engine/: OpenGLNapiWrapper.cpp  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLWidget.cpp  OpenGLWidget.h  index.cpp
neo-engine/: .gitignore  CMakeLists.txt
neo-engine/src/: OpenGLRenderer.cpp  OpenGLRenderer.h  main.cpp
nodegui-qopenglwidget/: .gitignore  CMakeLists.txt  README.md  package.json
nodegui-qopenglwidget/src/: App.tsx
nodegui-qopenglwidget/src/Components/OpenGLCube/: OpenGLWidget.ts
nodegui-qopenglwidget/src/Engine/: OpenGLNapiWrapper.h  OpenGLWidget.cpp  OpenGLWidget.h
nodegui-qopenglwidget/src/Native/: index.cpp
nodegui-qopenglwidget/src/OpenGLCube/: OpenGLComponent.ts  OpenGLCubeComponent.ts  OpenGLCubeReactWidget.ts  OpenGLCubeWidget.ts  index.ts
nodegui-qopenglwidget/src/OpenGLCube/Native/: OpenGLCubeNapiWrapper.cpp  OpenGLCubeNapiWrapper.h  OpenGLCubeNodeGuiWidget.h  OpenGLCubeWidget.cpp  OpenGLCubeWidget.h  OpenGLNapiWrapper.cpp  OpenGLNapiWrapper.h  OpenGLNodeGuiWidget.h  OpenGLWidget.cpp  OpenGLWidget.h
res/: AppIcon.icns
res/example-project/src/scripts/native/: .gitignore  CMakeLists.txt  NativeScriptComponent.h  SpinningEntity.cpp  build-web.sh
res/example-project/src/scripts/native/osx/: CMakeCache.txt  Makefile  cmake_install.cmake  libnative.dylib
res/example-project/src/scripts/native/src/: MainCameraController.cpp  PlayerController.cpp  SpinningEntity.cpp  SpinningEntity2.cpp
res/example-project/src/scripts/native/src/include/: MainCameraController.hpp  PlayerController.hpp  SpinningEntity.hpp  SpinningEntity2.hpp
res/example-project/src/scripts/native/sys/: build-all.sh  build-mac.sh  build-web.sh
res/example-project/src/scripts/native/sys/include/: Animation.h  Application.h  Component.h  DeepsMath.h  LuaScriptComponentSystem.h  Model.h  NativeScript.hpp  Renderer.h  Shader.h
res/example-project/src/scripts/native/sys/include/stb/tests/: stbi_read_fuzzer.c
res/example-project/src/scripts/native/sys/lib/: libDeepsEngine.dylib
res/example-project/src/scripts/native/web/: libnative.wasm
scripts/: install-arm64.sh  install-rosetta.sh  install.sh
src/: main.cpp
svelte-nodegui-starter/: README.md  package.json
web_build/: build.sh
(+1056 files in other folders)
